--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dompurify": "^3.0.8",
     "framer-motion": "^11.1.8",
     "next": "14.2.27",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
